n+1 issues and refactor for lists
